Enable coverage reports

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,8 @@
 addopts=-v
         -n 2
         --durations=10
+        --cov-report term-missing
+        --cov=rl
 
 # Do not run tests in the build folder or in the virtualenv folder `venv`.
 norecursedirs=build venv
