--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ install:
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib pandas pytest h5py
   - source activate test-environment
   - pip install pytest-xdist
+  - pip install pytest-cov python-coveralls coverage==3.7.1
   - pip install pep8 pytest-pep8
   - pip install git+git://github.com/Theano/Theano.git
 
