--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,8 @@ install:
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib pandas pytest h5py
   - source activate test-environment
   - pip install pytest-xdist
-  - pip install pytest-cov python-coveralls coverage==3.7.1
+  # See https://github.com/pytest-dev/pytest-cov/issues/124 for details
+  - pip install pytest-cov==2.2.1 python-coveralls coverage==3.7.1
   - pip install pep8 pytest-pep8
   - pip install git+git://github.com/Theano/Theano.git
 
