--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ install:
   - pip install pytest-cov==2.2.1 python-coveralls coverage==3.7.1
   - pip install pep8 pytest-pep8
   - pip install git+git://github.com/Theano/Theano.git
+  - pip install gym
 
   # Install TensorFlow.
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
