--- a/.travis.yml
+++ b/.travis.yml
@@ -47,9 +47,9 @@ install:
   - pip install theano tensorflow
   - pip install gym
   - if [[ "$LEGACY_KERAS" == "1" ]]; then
-      pip install keras==1.2.2
+      pip install keras==1.2.2;
     else
-      pip install keras
+      pip install keras;
     fi
 
   - python setup.py install
