--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ matrix:
         - python: 2.7
           env: KERAS_BACKEND=tensorflow
         - python: 2.7
+          env: KERAS_BACKEND=tensorflow LEGACY_KERAS=1
+        - python: 2.7
           env: KERAS_BACKEND=tensorflow TEST_MODE=PEP8
         - python: 2.7
           env: KERAS_BACKEND=theano TEST_MODE=INTEGRATION
@@ -42,8 +44,16 @@ install:
   # See https://github.com/pytest-dev/pytest-cov/issues/124 for details
   - pip install pytest-cov==2.2.1 python-coveralls coverage==3.7.1
   - pip install pep8 pytest-pep8
-  - pip install theano tensorflow
+  - pip install tensorflow
+  # Bleeding-edge: pip install git+https://github.com/Theano/Theano.git
+  - pip install theano>=0.9.0rc1
   - pip install gym
+  # Bleeding-edge: pip install git+https://github.com/fchollet/keras.git;
+  - if [[ "$LEGACY_KERAS" == "1" ]]; then
+      pip install keras==1.2.2;
+    else
+      pip install keras;
+    fi
 
   - python setup.py install
 
@@ -55,11 +65,11 @@ script:
   - sed -i -e 's/"backend":[[:space:]]*"[^"]*/"backend":\ "'$KERAS_BACKEND'/g' ~/.keras/keras.json;
   - echo -e "Running tests with the following config:\n$(cat ~/.keras/keras.json)"
   - if [[ "$TEST_MODE" == "INTEGRATION" ]]; then
-       PYTHONPATH=$PWD:$PYTHONPATH py.test tests/integration;
+      PYTHONPATH=$PWD:$PYTHONPATH py.test tests/integration;
     elif [[ "$TEST_MODE" == "PEP8" ]]; then
-       PYTHONPATH=$PWD:$PYTHONPATH py.test --pep8 -m pep8 -n0;
+      PYTHONPATH=$PWD:$PYTHONPATH py.test --pep8 -m pep8 -n0;
     else
-       PYTHONPATH=$PWD:$PYTHONPATH py.test tests/;
+      PYTHONPATH=$PWD:$PYTHONPATH py.test tests/;
     fi
 after_success:
   - coveralls
