Disable latex for now

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -3,8 +3,8 @@ theme: readthedocs
 docs_dir: sources
 repo_url: https://github.com/matthiasplappert/keras-rl
 site_description: 'Documentation for Keras-RL, a library for Deep Reinforcement Learning with Keras.'
-markdown_extensions: [mdx_math]
-extra_javascript: ['https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML']
+#markdown_extensions: [mdx_math]
+#extra_javascript: ['https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML']
 
 dev_addr: '0.0.0.0:8000'
 
