--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Keras-RL Documentation
 theme: readthedocs
-docs_dir: sources
+docs_dir: docs/sources
 repo_url: https://github.com/matthiasplappert/keras-rl
 site_description: 'Documentation for Keras-RL, a library for Deep Reinforcement Learning with Keras.'
 #markdown_extensions: [mdx_math]
