Require keras < 2.0.7 due to non-trivial API changes (#134)
* Require keras < 2.0.7 due to non-trivial API changes

* Bump version

* Change URL

* Use pinned version for tests

* Attempt to make Travis happy

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ install:
   - if [[ "$LEGACY_KERAS" == "1" ]]; then
       pip install keras==1.2.2;
     else
-      pip install keras;
+      pip install "keras<2.0.7";
     fi
 
   - python setup.py install
