--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,6 @@ matrix:
         - python: 2.7
           env: KERAS_BACKEND=tensorflow
         - python: 2.7
-          env: KERAS_BACKEND=tensorflow LEGACY_KERAS=1
-        - python: 2.7
           env: KERAS_BACKEND=tensorflow TEST_MODE=PEP8
         - python: 2.7
           env: KERAS_BACKEND=theano TEST_MODE=INTEGRATION
@@ -38,7 +36,7 @@ install:
   # Useful for debugging any issues with conda
   - conda info -a
 
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib pandas pytest h5py
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib pandas pytest h5py mkl-service
   - source activate test-environment
   - pip install pytest-xdist
   # See https://github.com/pytest-dev/pytest-cov/issues/124 for details
@@ -49,12 +47,7 @@ install:
   - pip install theano>=0.9.0rc1
   - pip install gym
   # Bleeding-edge: pip install git+https://github.com/fchollet/keras.git;
-  - if [[ "$LEGACY_KERAS" == "1" ]]; then
-      pip install keras==1.2.2;
-    else
-      pip install "keras<2.0.7";
-    fi
-
+  - pip install "keras>=2.0.7";
   - python setup.py install
 
 # command to run tests.
