--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ install:
   - pip install "theano<1.0"
   - pip install gym
   # Bleeding-edge: pip install git+https://github.com/fchollet/keras.git;
-  - pip install "keras>=2.0.7";
+  - pip install "keras>=2.0.7,<=2.1.3";
   - python setup.py install
 
 # command to run tests.
