--- a/.travis.yml
+++ b/.travis.yml
@@ -36,11 +36,12 @@ install:
   # Useful for debugging any issues with conda
   - conda info -a
 
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib pandas pytest h5py
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy matplotlib pandas pytest h5py
   - source activate test-environment
   - pip install pytest-xdist
   # See https://github.com/pytest-dev/pytest-cov/issues/124 for details
   - pip install pep8 pytest-pep8
+  - pip install scipy
   - pip install tensorflow
   # Bleeding-edge: pip install git+https://github.com/Theano/Theano.git
   - pip install "theano<1.0"
