#197 add README to docs
Also: ignore sources folder (like Keras does).
However, I am not sure if this will work with the Keras-RL ReadTheDocs setup

--- a/.gitignore
+++ b/.gitignore
@@ -68,8 +68,8 @@ coverage.xml
 # Django stuff:
 *.log
 
-# Sphinx documentation
-docs/_build/
+# Mkdocs documentation
+docs/sources/
 
 # PyBuilder
 target/
